add serial port | change drawGrid | gitignore

--- a/Mapowanie2/changeposewindow.ui
+++ b/Mapowanie2/changeposewindow.ui
@@ -355,6 +355,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>textEditX</tabstop>
+  <tabstop>textEditY</tabstop>
+  <tabstop>textEditDeg</tabstop>
+  <tabstop>buttonCancel</tabstop>
+  <tabstop>buttonOk</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
