--- a/Mapowanie2/mainwindow.ui
+++ b/Mapowanie2/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>920</width>
-    <height>796</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -91,7 +91,23 @@
              <number>0</number>
             </property>
             <item>
+             <widget class="QLabel" name="connectionLabel">
+              <property name="text">
+               <string/>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QPushButton" name="connectButton">
+              <property name="maximumSize">
+               <size>
+                <width>80</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <property name="text">
                <string>Connect</string>
               </property>
