--- a/Mapowanie2/changeposewindow.ui
+++ b/Mapowanie2/changeposewindow.ui
@@ -44,7 +44,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="textLabel">
          <property name="text">
           <string>Enter new pose:</string>
          </property>
