--- a/Mapowanie2/mainwindow.ui
+++ b/Mapowanie2/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>920</width>
+    <width>965</width>
     <height>800</height>
    </rect>
   </property>
@@ -138,16 +138,16 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_4">
             <item>
-             <widget class="QLabel" name="label">
+             <widget class="QLabel" name="currPoseLabel">
               <property name="minimumSize">
                <size>
-                <width>0</width>
+                <width>140</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>105</width>
+                <width>140</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -180,41 +180,6 @@
              <widget class="QPushButton" name="graphButton">
               <property name="text">
                <string>Show Graph</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="maximumSize">
-               <size>
-                <width>110</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::Box</enum>
-              </property>
-              <property name="text">
-               <string>Last message:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="serialPortLabel">
-              <property name="minimumSize">
-               <size>
-                <width>200</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>200</width>
-                <height>25</height>
-               </size>
-              </property>
-              <property name="text">
-               <string/>
               </property>
              </widget>
             </item>
