--- a/Mapowanie2/plotwindow.ui
+++ b/Mapowanie2/plotwindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Graph</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
