--- a/Mapowanie2/mainwindow.ui
+++ b/Mapowanie2/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Ultrasonic Mapping</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="enabled">
@@ -179,7 +179,7 @@
             <item>
              <widget class="QPushButton" name="graphButton">
               <property name="text">
-               <string>Show Graph</string>
+               <string>Show graph</string>
               </property>
              </widget>
             </item>
