--- a/Mapowanie2/welcomedialog.ui
+++ b/Mapowanie2/welcomedialog.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Welcome</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
